@@ -6,11 +6,19 @@ HYPERMAIL VERSION 2.4.0:
 
 2018-11-04 Bill Shannon
 	* string.c
-	i18n_convstring(): fix usage problems with iconv
+	i18n_convstring(): When converting a utf-8 string to iso-2022-jp,
+	hypermail always adds the "return to ASCII" escape sequence, even if
+	the string ends with ASCII.
+
+	parseemail(): hypermail attempts to transform anything that looks like
+	an email address by replacing the at sign (and optionally the domain
+	name) with a string (default "at") to confuse screen-scraping
+	programs. But if there's an "@" character in the middle of a string of
+	iso-2022-jp encoded Japanese characters, hypermail still converts it,
+	breaking the Japanese character.
 
 2018-10-12 Jose Kahan
-	* setup.c
-	PreConfig(): removed a 64-bit warning
+	* setup.c PreConfig(): removed a 64-bit warning
 
 	* hypermail.c
 	main(): if the en_US locale is not available, try en_US.UTF-8
